tests/baselines/reference/parser553699.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts(3,21): error TS2304: Cannot find name 'public'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts (1 errors) ====
    class Foo {
      constructor() { }
      public banana (x: public) { }
                        ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }
    
    class Bar {
      constructor(c: Bar) { }
    }